<resources>
    <string name="app_name">Student\'s_record_book</string>
    <string name="please_wait">Загрузка</string>
    <string name="mock_data">Mock data here ...</string>
    <string name="student_name">Name</string>
    <string name="student_num_book">Зачетная книжка №</string>
    <string name="otdelenie">Отделение</string>
    <string name="facultet">Факультет</string>
    <string name="specialnost">Специальность</string>
    <string name="zacheti">Зачеты</string>
    <string name="eczameni">Экзамены</string>
    <string name="nazvanie">Название</string>
</resources>
