<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="8dp"
            android:paddingTop="4dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:paddingRight="4dp"
                android:text="@string/student_num_book"/>
            <TextView
                android:id="@+id/num_book"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mock_data"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Пупкин Алексей Николаевич"/>
    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:paddingTop="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otdelenie"/>
        <TextView
            android:id="@+id/otdelenie"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mock_data"/>
    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:paddingTop="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facultet"/>
        <TextView
            android:id="@+id/facultet"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mock_data"/>
    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:paddingTop="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialnost"/>
        <TextView
            android:id="@+id/specialnost"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mock_data"/>
    </LinearLayout>

</LinearLayout>